--- a/menu/styles.css
+++ b/menu/styles.css
@@ -91,7 +91,8 @@ button:hover {
   width: 100%;
   height: 100vh;
   background-size: cover;
-  background-image: url("/menu/menu_images/potential_road_image\ copy2.png");
+  /* background-image: url("/menu/menu_images/potential_road_image\ copy2.png"); */
+  background-color: #7CFC00;
   background-repeat: no-repeat;
   animation: moveBackground 100s linear infinite; 
 }
